# 4102

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: Cargo.toml  chatbot.rs  embed.rs  main.rs  weather.rs
