[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
poise = "0.6.1"
openai = "1.0.0-alpha.14"
async-trait = "0.1"
chrono = "0.4"
localzone = "0.3.1"
shuttle-runtime = "0.43.0"
shuttle-axum = "0.43.0"
shuttle-serenity = "0.43.0"
anyhow = "1.0.68"
substring = "1.4.5"
rand = "0.8"
